[package]
name = "gramine-sirrah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.34.0"
async-std = "1" # = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3"
revm = { git = "ssh://git@github.com/flashbots/revm.git", branch = "extensible-precompiles", features = ["serde"] }
suave-andromeda-revm = { git = "ssh://git@github.com/flashbots/suave-andromeda-revm.git", branch = "main" }
clap = { version = "4.4.11", features = ["derive"] }

# Misc
eyre = "0.6.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.105"

ethers-core = { version = "2.0.11" }
ethers-contract = { version = "2.0.11", default-features = false }

[patch."https://github.com/bluealloy/revm"]
revm = { git = "ssh://git@github.com/flashbots/revm.git", branch = "extensible-precompiles" }
revm-primitives = { git = "ssh://git@github.com/flashbots/revm.git", branch = "extensible-precompiles" }
